--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -14,8 +14,8 @@ const { id } = Astro.props
   <div class="py-8 px-3 max-w-7xl mx-auto">
     <div class="grid grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-8">
       {
-        SKILLS.map((skill) => (
-          <div class="flex flex-col items-center text-center">
+        SKILLS.map((skill, index) => (
+          <div class="flex flex-col items-center text-center" data-aos="zoom-in" data-aos-delay={index * 40}>
             <img
               class="w-16 h-16 mb-2 object-contain"
               src={skill.icon}
