--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -1,6 +1,5 @@
 ---
 import Section from './shared/Section.astro'
-import ProjectIcon from '../assets/icons/ProjectIcon.astro'
 import ButtonLink from './shared/ButtonLink.astro'
 import GitHub from '../assets/icons/GitHub.astro'
 import WebIcon from '../assets/icons/WebIcon.astro'
@@ -51,11 +50,11 @@ const { id } = Astro.props
                   {project.live && (
                     <ButtonLink
                       href={project.live}
-                      title={`Vista previa de proyecto ${project.title}`}
+                      title={`Ver demo de proyecto ${project.title}`}
                       class="bg-gradient-to-r from-blue-600 to-purple-600 px-4"
                     >
                       <WebIcon size={20} />
-                      Vista previa
+                      Ver demo
                     </ButtonLink>
                   )}
                   {project.link && (
