--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -14,8 +14,8 @@ const { id } = Astro.props
   <div class="lg:py-8 px-4 lg:px-6 max-w-7xl mx-auto">
     <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
       <ExperienceCard
-        position="Desarrollador Full-Stack"
-        company="Freelance"
+        position="Freelance"
+        company="Independiente"
         period="2024 - Presente"
         delay="100"
       >
