--- a/src/components/shared/ContactCard.astro
+++ b/src/components/shared/ContactCard.astro
@@ -13,9 +13,7 @@ const { href, title } = Astro.props
       <slot name="icon" />
     </picture>
     <div>
-      <h1
-        class="text-2xl font-bold bg-gradient-to-r from-blue-600 via-purple-600 to-pink-600 bg-clip-text text-transparent"
-      >
+      <h1 class="text-2xl font-bold text-blue-800">
         {title}
       </h1>
       <slot name="description" />
