--- a/src/components/shared/ExperienceCard.astro
+++ b/src/components/shared/ExperienceCard.astro
@@ -2,10 +2,12 @@
 const { position, company, period, delay } = Astro.props
 ---
 
-<article class="rounded-xl border border-gray-300 p-4" data-aos="fade-up" data-aos-delay={delay}>
-  <h1
-    class="text-2xl font-bold bg-gradient-to-r from-blue-600 via-purple-600 to-pink-600 bg-clip-text text-transparent mb-4"
-  >
+<article
+  class="rounded-xl border border-gray-200 py-4 px-5 bg-blue-100/20 shadow-xl"
+  data-aos="fade-up"
+  data-aos-delay={delay}
+>
+  <h1 class="text-2xl font-bold text-blue-800 mb-4">
     {position}
   </h1>
   <h2 class="font-medium">{company}</h2>
