--- a/src/components/shared/Footer.astro
+++ b/src/components/shared/Footer.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<section class="bg-white pb-12">
+<section class="bg-white pb-28 md:pb-12">
   <footer class="flex justify-center max-w-7xl mx-auto items-center px-3 xl:px-0">
     <p class="text-sm text-gray-700">
       © {new Date().getFullYear()} Luis Gómez Dev.
