--- a/src/components/shared/Navbar.astro
+++ b/src/components/shared/Navbar.astro
@@ -1,26 +1,23 @@
 ---
-import HomeIcon from '../assets/icons/HomeIcon.astro'
-import ExperienceIcon from '../assets/icons/ExperienceIcon.astro'
-import CodeIcon from '../assets/icons/CodeIcon.astro'
-import SkillIcon from '../assets/icons/SkillIcon.astro'
-import MailIcon from '../assets/icons/MailIcon.astro'
+import ExperienceIcon from '../../assets/icons/ExperienceIcon.astro'
+import CodeIcon from '../../assets/icons/CodeIcon.astro'
+import SkillIcon from '../../assets/icons/SkillIcon.astro'
+import MailIcon from '../../assets/icons/MailIcon.astro'
 ---
 
 <header
   class="fixed top-0 left-0 w-full p-3 md:p-0 duration-300 z-30 transition-all backdrop-blur-3xl bg-transparent"
 >
   <nav
-    class="duration-300 mx-auto max-w-7xl w-full text-black flex items-center py-2 md:py-5 justify-between h-auto transition-all md:px-4 lg:px-6"
+    class="duration-300 mx-auto max-w-7xl w-full text-black flex items-center py-2 md:py-5 md:justify-between justify-center h-auto transition-all md:px-4 lg:px-6"
   >
     <a
       href="#inicio"
-      class="w-8 flex items-center gap-2 font-bold transition-transform duration-300 hover:scale-110"
+      class="flex items-center gap-2 font-bold transition-transform duration-300 hover:scale-105"
     >
-      <img src="/logo_personal.webp" alt="Logo Luis Gomez Dev" />
-      <span class="text-2xl tracking-wide text-black">LGDev.</span>
+      <img src="/logo_personal.webp" alt="Logo Luis Gomez Dev" class="w-8" />
+      <span class="text-2xl tracking-wide text-black">LuisGomezDev</span>
     </a>
-
-    <button id="menuToggle" class="md:hidden text-3xl z-50 relative"> ☰ </button>
 
     <ul class="hidden md:flex items-center gap-x-7 sm:gap-x-12 text-black">
       <li>
@@ -61,15 +58,6 @@ import MailIcon from '../assets/icons/MailIcon.astro'
       </li>
     </ul>
 
-    <div
-      id="mobileMenu"
-      class="fixed top-0 right-0 w-full h-screen bg-white text-black flex flex-col items-center justify-center gap-12 text-4xl font-medium transform translate-x-full transition-transform duration-500 md:hidden z-40 backdrop-blur-3xl"
-    >
-      <a href="#experiencia" onclick="toggleMenu()">Experiencia</a>
-      <a href="#portafolio" onclick="toggleMenu()">Portafolio</a>
-      <a href="#habilidades" onclick="toggleMenu()">Habilidades</a>
-      <a href="#contacto" onclick="toggleMenu()">Contacto</a>
-    </div>
   </nav>
 </header>
 
@@ -77,8 +65,6 @@ import MailIcon from '../assets/icons/MailIcon.astro'
   if (typeof window !== 'undefined') {
     const nav = document.querySelector('header')
     const menu = document.getElementById('mobileMenu')
-    const toggle = document.getElementById('menuToggle')
-    const desktopMenu = document.querySelector('nav ul')
 
     window.addEventListener('scroll', () => {
       if (window.scrollY > 50) {
@@ -88,14 +74,6 @@ import MailIcon from '../assets/icons/MailIcon.astro'
         nav?.classList.remove('bg-white/80', 'shadow-md')
         nav?.classList.add('bg-transparent')
       }
-    })
-
-    window.toggleMenu = () => {
-      menu?.classList.toggle('translate-x-full')
-    }
-
-    toggle?.addEventListener('click', () => {
-      window.toggleMenu()
     })
   }
 </script>
