fix padding in menu

--- a/src/components/shared/MenuBottom.astro
+++ b/src/components/shared/MenuBottom.astro
@@ -5,24 +5,24 @@ import SkillIcon from '../../assets/icons/SkillIcon.astro'
 import MailIcon from '../../assets/icons/MailIcon.astro'
 ---
 
-<div class="fixed bottom-0 left-0 w-full border-t border-gray-300 bg-white">
+<div class="fixed bottom-0 left-0 w-full border-t border-gray-300 bg-gray-50">
   <nav class="flex items-center justify-between">
-    <a href="#experiencia" class="flex flex-col items-center p-2 active:bg-blue-50">
+    <a href="#experiencia" class="flex flex-col items-center p-4 active:bg-blue-50 text-sm">
       <div><ExperienceIcon /></div>
       Experiencia
     </a>
 
-    <a href="#portafolio" class="flex flex-col items-center p-2 active:bg-blue-50">
+    <a href="#portafolio" class="flex flex-col items-center p-4 active:bg-blue-50 text-sm">
       <div><CodeIcon /></div>
       Portafolio
     </a>
 
-    <a href="#habilidades" class="flex flex-col items-center p-2 active:bg-blue-50">
+    <a href="#habilidades" class="flex flex-col items-center p-4 active:bg-blue-50 text-sm">
       <div><SkillIcon /></div>
       Habilidades
     </a>
 
-    <a href="#contacto" class="flex flex-col items-center p-2 active:bg-blue-50">
+    <a href="#contacto" class="flex flex-col items-center p-4 active:bg-blue-50 text-sm">
       <div><MailIcon /></div>
       Contacto
     </a>
