hidden menu in desktop view

--- a/src/components/shared/MenuBottom.astro
+++ b/src/components/shared/MenuBottom.astro
@@ -5,7 +5,7 @@ import SkillIcon from '../../assets/icons/SkillIcon.astro'
 import MailIcon from '../../assets/icons/MailIcon.astro'
 ---
 
-<div class="fixed bottom-0 left-0 w-full border-t border-gray-300 bg-gray-50">
+<div class="fixed md:hidden bottom-0 left-0 w-full border-t border-gray-300 bg-gray-50">
   <nav class="flex items-center justify-between">
     <a href="#experiencia" class="flex flex-col items-center p-4 active:bg-blue-50 text-sm">
       <div><ExperienceIcon /></div>
