--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -31,10 +31,9 @@ const { id } = Astro.props
       </div>
       <h2 class="text-2xl lg:text-3xl font-semibold typing-text text-black">Desarrollador Web</h2>
       <p
-        class="text-lg text-pretty text-gray-800 opacity-80 dark:text-black leading-relaxed max-w-lg"
+        class="text-lg text-pretty text-gray-800 opacity-80 dark:text-black leading-relaxed max-w-2xl my-3 md:my-0"
       >
-        Ingeniero de sistemas con más de cuatro años de experiencia en el diseño, desarrollo y
-        mantenimiento de aplicaciones web.
+        Ingeniero de Sistemas con más de 4 años de experiencia. Experto en el ciclo de vida completo del software, dominando el stack Java/Spring Boot (Backend) y TypeScript/Angular (Frontend).
       </p>
       <div class="flex items-center space-x-4 justify-center md:justify-start">
         <span class="text-gray-800 dark:text-black font-medium hidden md:block">Sígueme por:</span>
