--- a/src/components/shared/ButtonLink.astro
+++ b/src/components/shared/ButtonLink.astro
@@ -9,7 +9,7 @@ const {
 ---
 
 <a
-  class={`flex items-center font-medium px-2 py-2 rounded-full gap-2 shadow-lg hover:shadow-gray-400 cursor-pointer hover:scale-105 transition-all duration-300 ${textColor}  ${className}`}
+  class={`flex items-center font-medium px-2 py-2 rounded-full gap-2 shadow-lg hover:shadow-gray-400 dark:hover:shadow-gray-900 cursor-pointer hover:scale-105 transition-all duration-300 ${textColor}  ${className}`}
   href={href}
   target={target}
   title={title}
