--- a/src/components/shared/Section.astro
+++ b/src/components/shared/Section.astro
@@ -1,11 +1,11 @@
 ---
-const { title, subtitle, id, class: className = 'bg-white' } = Astro.props
+const { title, subtitle, id, class: className = 'bg-white dark:bg-[#050C1D]' } = Astro.props
 ---
 
 <section id={id} class={`scroll-mt-16 py-16 ${className}`}>
   <section class="text-center mb-8">
-    <h1 class="text-3xl font-semibold">{title}</h1>
-    {subtitle && <h3 class="opacity-70 text-base px-4">{subtitle}</h3>}
+    <h1 class="text-3xl font-semibold dark:text-white">{title}</h1>
+    {subtitle && <h3 class="opacity-70 dark:text-white text-base px-4">{subtitle}</h3>}
   </section>
   <slot />
 </section>
