--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -34,7 +34,7 @@ const { title } = Astro.props
     <title>{title}</title>
     <meta
       name="keywords"
-      content="Luis Gómez, Software Developer, Web Developer, FullStack Developer, Angular, TypeScript, JavaScript, Java, Bootstrap, Desarrollador"
+      content="Luis Gómez, Software Developer, Web Developer, FullStack Developer, Angular, TypeScript, JavaScript, Java, Tailwind, Desarrollador, Desarrollador Web, Desarrollador FullStack, Ingeniero de Sistemas, Portafolio, Portfolio"
     />
 
     <meta property="og:type" content="website" />
