--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -15,28 +15,28 @@ const { id } = Astro.props
 
 <section
   id={id}
-  class="h-auto md:min-h-screen scroll-mt-16 overflow-x-hidden transition-all duration-500 bg-gradient-to-br from-gray-50 via-white to-purple-50 text-gray-800"
+  class="h-auto md:min-h-screen scroll-mt-16 overflow-x-hidden transition-all duration-500 bg-gradient-to-br from-gray-50 via-white to-blue-100 dark:from-gray-900 dark:via-gray-950 dark:to-blue-950 text-gray-800"
 >
   <header
     class="max-w-7xl mx-auto px-4 lg:px-6 py-20 md:py-32 gap-x-12 gap-y-10 items-center h-auto md:h-screen flex flex-col md:flex-row justify-between"
   >
     <div class="flex flex-col gap-4 text-center md:text-left animate-fade-in-left">
       <div>
-        <p class="text-lg md:mb-4 text-gray-600">Hola, mi nombre es</p>
+        <p class="text-lg md:mb-4 text-gray-600 dark:text-gray-400">Hola, mi nombre es</p>
         <h1
-          class="text-4xl md:text-5xl lg:text-7xl font-bold md:mb-3 leading-20 md:leading-24 text-blue-800"
+          class="text-4xl md:text-5xl lg:text-7xl font-bold md:mb-3 leading-20 md:leading-24 text-blue-800 dark:text-blue-600"
         >
           Luis Gómez Arteaga
         </h1>
       </div>
-      <h2 class="text-2xl lg:text-3xl font-semibold typing-text text-black">Desarrollador Web</h2>
+      <h2 class="text-2xl lg:text-3xl font-semibold typing-text text-black dark:text-white">Desarrollador Web</h2>
       <p
-        class="text-lg text-pretty text-gray-800 opacity-80 dark:text-black leading-relaxed max-w-2xl my-3 md:my-0"
+        class="text-lg text-pretty text-gray-800 opacity-80 dark:text-white/80 leading-relaxed max-w-2xl my-3 md:my-0"
       >
         Ingeniero de Sistemas con más de 4 años de experiencia. Experto en el ciclo de vida completo del software, dominando el stack Java/Spring Boot (Backend) y TypeScript/Angular (Frontend).
       </p>
       <div class="flex items-center space-x-4 justify-center md:justify-start">
-        <span class="text-gray-800 dark:text-black font-medium hidden md:block">Sígueme por:</span>
+        <span class="text-gray-800 dark:text-white font-medium hidden md:block">Sígueme por:</span>
         <div class="flex space-x-3">
           <ButtonLink
             href="https://github.com/luisgomezadev"
@@ -90,42 +90,13 @@ const { id } = Astro.props
       </div>
     </div>
     <div class="relative flex justify-center items-center">
-      <div class="bg-blue-800 p-1 rounded-full animate-fade-in-up">
+      <div class="bg-blue-800 dark:bg-blue-600 p-1 rounded-full animate-fade-in-up">
         <img
           src="/luis_perfil.webp"
           alt="Luis Gómez"
-          class="bg-gray-100 rounded-full w-72 h-72 sm:w-96 sm:h-96 lg:w-[420px] lg:h-[420px] object-cover grayscale"
+          class="bg-gray-100 dark:bg-gray-800 rounded-full w-72 h-72 sm:w-96 sm:h-96 lg:w-[420px] lg:h-[420px] object-cover grayscale"
         />
       </div>
-
-      <!-- <div
-        class="absolute top-6 left-8 sm:left-20 w-12 h-12 sm:w-16 sm:h-16 bg-white text-gray-800 border rounded-full drop-shadow-2xl shadow-lg shadow-gray-800 flex items-center justify-center hover:scale-110 hover:shadow-xl hover:-translate-y-1 transition-all duration-300 animate-float group"
-      >
-        <span class="group-hover:text-red-700 transition-all duration-300"
-          ><AngularIcon class="w-6 h-6 sm:w-8 sm:h-8" /></span
-        >
-      </div>
-      <div
-        class="absolute top-12 right-8 md:right-12 w-12 h-12 sm:w-16 sm:h-16 bg-white text-gray-800 border rounded-full drop-shadow-2xl shadow-lg shadow-gray-800 flex items-center justify-center hover:scale-110 hover:shadow-xl hover:-translate-y-1 transition-all duration-300 animate-float group"
-      >
-        <span class="group-hover:text-blue-700 transition-all duration-300"
-          ><TypeScriptIcon class="w-6 h-6 sm:w-8 sm:h-8" /></span
-        >
-      </div>
-      <div
-        class="absolute bottom-0 left-8 sm:left-20 w-12 h-12 sm:w-16 sm:h-16 bg-white text-gray-800 border rounded-full drop-shadow-2xl shadow-lg shadow-gray-800 flex items-center justify-center hover:scale-110 hover:shadow-xl hover:-translate-y-1 transition-all duration-300 animate-float group"
-      >
-        <span class="group-hover:text-green-600 transition-all duration-300"
-          ><SpringIcon class="w-6 h-6 sm:w-8 sm:h-8" /></span
-        >
-      </div>
-      <div
-        class="absolute bottom-8 sm:bottom-10 right-10 sm:right-12 w-12 h-12 sm:w-16 sm:h-16 bg-white text-gray-800 border rounded-full drop-shadow-2xl shadow-lg shadow-gray-800 flex items-center justify-center hover:scale-110 hover:shadow-xl hover:-translate-y-1 transition-all duration-300 animate-float group"
-      >
-        <span class="group-hover:text-[#F7DF1E] transition-all duration-300"
-          ><JavaScriptIcon class="w-6 h-6 sm:w-8 sm:h-8" /></span
-        >
-      </div> -->
     </div>
   </header>
 </section>
