--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -9,19 +9,14 @@ import { PROJECTS } from '../data/projects'
 const { id } = Astro.props
 ---
 
-<Section
-  title="Portafolio"
-  id={id}
-  subtitle="Algunos de los proyectos que he desarrollado"
-  class="bg-white"
->
+<Section title="Portafolio" id={id} subtitle="Algunos de los proyectos que he desarrollado">
   <div class="lg:py-8 px-4 lg:px-6 max-w-7xl mx-auto grid grid-cols-1 gap-8">
     {
       PROJECTS.map(
-        (project, index) =>
+        (project) =>
           project.home && (
             <article
-              class="flex flex-col md:flex-row gap-x-12 border border-gray-200 rounded-xl overflow-hidden p-3 bg-blue-100/20 shadow-xl"
+              class="flex flex-col md:flex-row gap-x-12 border border-gray-200 dark:border-gray-800 rounded-xl overflow-hidden p-3 bg-blue-100/20 dark:bg-blue-100/5 shadow-xl dark:text-white"
               data-aos="fade-up"
             >
               <div class="flex items-center justify-center w-full md:w-[1500px] overflow-hidden">
@@ -33,13 +28,15 @@ const { id } = Astro.props
                 />
               </div>
               <div class="flex flex-col p-4">
-                <h1 class="text-2xl font-bold text-blue-800 mb-4">{project.title}</h1>
+                <h1 class="text-2xl font-bold text-blue-800 dark:text-blue-600 mb-4">
+                  {project.title}
+                </h1>
 
                 <div class="flex flex-wrap gap-3 mb-4">
                   {project.technologies.map((tech) => (
-                    <div class="flex items-center gap-2 bg-black/10 px-3 py-1 rounded-lg shadow">
+                    <div class="flex items-center gap-2 bg-black/10 dark:bg-black/20 px-3 py-1 rounded-lg shadow">
                       <img src={tech.image} class="w-4 object-contain" alt={tech.name} />
-                      <span class="text-sm text-gray-700">{tech.name}</span>
+                      <span class="text-sm text-gray-700 dark:text-gray-300">{tech.name}</span>
                     </div>
                   ))}
                 </div>
@@ -59,7 +56,7 @@ const { id } = Astro.props
                   {project.link && (
                     <ButtonLink
                       title={`Ver repositorio de proyecto ${project.title}`}
-                      class="px-4 bg-gray-300/50"
+                      class="px-4 bg-gray-300/50 dark:bg-gray-200"
                       textColor="text-blue-800"
                       href={project.link}
                     >
