--- a/src/components/shared/ContactCard.astro
+++ b/src/components/shared/ContactCard.astro
@@ -4,7 +4,7 @@ const { href, title } = Astro.props
 
 <article>
   <a
-    class="flex gap-6 items-center border bg-white/40 border-gray-300 rounded-xl overflow-hidden shadow py-4 px-4 hover:bg-black/5 transition-colors duration-300"
+    class="flex gap-6 items-center border bg-white/40 dark:bg-blue-100/5 border-gray-300 dark:border-gray-800 rounded-xl overflow-hidden shadow py-4 px-4 hover:bg-black/5 transition-colors duration-300 dark:text-white"
     href={href}
     target="_blank"
     rel="noopener noreferrer"
@@ -13,7 +13,7 @@ const { href, title } = Astro.props
       <slot name="icon" />
     </picture>
     <div>
-      <h1 class="text-2xl font-bold text-blue-800">
+      <h1 class="text-2xl font-bold text-blue-800 dark:text-blue-600">
         {title}
       </h1>
       <slot name="description" />
