--- a/src/components/shared/ExperienceCard.astro
+++ b/src/components/shared/ExperienceCard.astro
@@ -3,11 +3,11 @@ const { position, company, period, delay } = Astro.props
 ---
 
 <article
-  class="rounded-xl border border-gray-200 py-4 px-5 bg-blue-100/20 shadow-xl"
+  class="rounded-xl border border-gray-200 dark:border-gray-800 py-4 px-5 bg-blue-100/20 dark:bg-blue-100/5 shadow-xl dark:text-white"
   data-aos="fade-up"
   data-aos-delay={delay}
 >
-  <h1 class="text-2xl font-bold text-blue-800 mb-4">
+  <h1 class="text-2xl font-bold text-blue-800 dark:text-blue-600 mb-4">
     {position}
   </h1>
   <h2 class="font-medium">{company}</h2>
