--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Contact from '../components/Contact.astro'
 import 'aos/dist/aos.css'
 ---
 
-<Layout title="Luis Gomez | Desarrollador Web Full-Stack">
+<Layout title="Luis Gomez | Desarrollador Web">
   <Hero id="inicio" />
   <Experience id="experiencia" />
   <Projects id="portafolio" />
