refactor: improve styling and responsiveness of MenuBottom and Navbar components

--- a/src/components/shared/MenuBottom.astro
+++ b/src/components/shared/MenuBottom.astro
@@ -5,9 +5,9 @@ import SkillIcon from '../../assets/icons/SkillIcon.astro'
 import MailIcon from '../../assets/icons/MailIcon.astro'
 ---
 
-<div class="md:hidden p-2 fixed bottom-0 w-full z-50">
+<div class="md:hidden px-4 pb-4 fixed bottom-0 w-full z-50">
   <div
-    class="border border-gray-300 bg-gray-50 shadow-2xl rounded-full z-50"
+    class="border border-gray-300 bg-gray-50 dark:border-gray-800 dark:bg-gray-50/10 dark:backdrop-blur-3xl shadow-2xl rounded-full z-50"
   >
     <nav class="flex items-center justify-around">
       <a href="#experiencia" class="flex flex-col items-center p-4 text-sm">
