--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -55,7 +55,7 @@ const { title } = Astro.props
     />
     <ClientRouter />
   </head>
-  <body class="text-gray-800 bg-white">
+  <body class="text-gray-800 bg-white dark:bg-[#050C1D] dark:text-white transition-colors duration-500">
     <Navbar />
     <main class="flex flex-col md:pt-0 pt-12">
       <slot />
